06-cluster-setup-15_100/02-netpol/cilium/00-deny-all.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
