06-cluster-setup-15_100/02-netpol/cilium/05-dev-to-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dev-to-kube-apiserver
spec:
  endpointSelector:
    matchLabels:
      env: dev
  egress:
  - toEntities:
    - kube-apiserver
