06-cluster-setup-15_100/02-netpol/cilium/06-to-dev-from-nodes.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: to-dev-from-nodes-in-cluster
spec:
  endpointSelector:
    matchLabels:
      env: dev
  ingress:
    - fromEntities:
      - host
      - remote-node
