06-cluster-setup-15_100/02-netpol/cilium/07-to-public-from-outside.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: from-world-to-role-public
spec:
  endpointSelector:
    matchLabels:
      role: public
  ingress:
    - fromEntities:
      - world
